postgres/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
  namespace: team1-tenant1
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
