postgres/all.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
  namespace: team1-tenant1
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: postgres-route
  namespace: team1-tenant1
spec:
  host: postgres-team1.apps.natwest.priartw.com
  to:
    kind: Service
    name: postgres-service
    weight: 100
  port:
    targetPort: 5432
